src/test/ui/methods/method-ambig-two-traits-with-default-method.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-ambig-two-traits-with-default-method.rs:12:13
   |
LL |     1_usize.method();
   |             ^^^^^^ multiple `method` found
   |
note: candidates defined here:
  --> $DIR/method-ambig-two-traits-with-default-method.rs:5:13
   |
LL | trait Foo { fn method(&self) {} }
   |             ^^^^^^^^^^^^^^^^ candidate #1 is defined in an impl of the trait `Foo` for the type `usize`
LL | trait Bar { fn method(&self) {} }
   |             ^^^^^^^^^^^^^^^^ candidate #2 is defined in an impl of the trait `Bar` for the type `usize`
help: disambiguate the method call for candidate #1
   |
LL |     Foo::method(&1_usize);
   |     ^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     Bar::method(&1_usize);
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
